--- a/index.html
+++ b/index.html
@@ -190,53 +190,53 @@
     			<div class="col-lg-6 py-5">
     				<img src="images/undraw_podcast_q6p7.svg" class="img-fluid" alt="">
     				<div class="heading-section ftco-animate mt-5">
-	            <h2 class="mb-4">Our Main Services</h2>
-	            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country.</p>
+	            <h2 class="mb-4">Our Process</h2>
+	            <p>We have created an organized step by step plan for people to first detect if their friend is potentially suicidal, and then pair them with a therapist to help them with a therapist best suited for their problem.</p>
 	          </div>
     			</div>
     			<div class="col-lg-6 py-5">
     				<div class="row">
     					<div class="col-md-6 ftco-animate">
-    						<div class="media block-6 services border text-center">
+    						<div class="media block-6 services border text-left">
 		            	<div class="icon d-flex align-items-center justify-content-center">
 		            		<span class="flaticon-cloud-computing"></span>
 		            	</div>
 		              <div class="mt-3 media-body media-body-2">
-		                <h3 class="heading">Cloud VPS</h3>
-		                <p>Even the all-powerful Pointing has no control about the blind texts</p>
+		                <h3 class="heading">Primary Diagnosis</h3>
+		                <p>Using our basic NLP model, a friend can either input a screenshot, or write out text and will be able to see if their friend is just suffering depression, or is on the suicidal side. </p>
 		              </div>
 		            </div>
     					</div>
     					<div class="col-md-6 ftco-animate">
-    						<div class="media block-6 services border text-center">
+    						<div class="media block-6 services border text-left">
 		            	<div class="icon d-flex align-items-center justify-content-center">
 		            		<span class="flaticon-cloud"></span>
 		            	</div>
 		              <div class="mt-3 media-body media-body-2">
-		                <h3 class="heading">Share</h3>
-		                <p>Even the all-powerful Pointing has no control about the blind texts</p>
+		                <h3 class="heading">Progression Model</h3>
+		                <p>The friend will then input more data and our progression model will be able to detect what stage of depression the person is in and what could be the cause of it.</p>
 		              </div>
 		            </div>
     					</div>
     					<div class="col-md-6 ftco-animate">
-    						<div class="media block-6 services border text-center">
+    						<div class="media block-6 services border text-left">
 		            	<div class="icon d-flex align-items-center justify-content-center">
 		            		<span class="flaticon-server"></span>
 		            	</div>
 		              <div class="mt-3 media-body media-body-2">
-		                <h3 class="heading">VPS</h3>
-		                <p>Even the all-powerful Pointing has no control about the blind texts</p>
+		                <h3 class="heading">Locating Therapists</h3>
+		                <p>Once the proper diagnosis has been reached, our algorithms will be able to match a personalized therapist to the depressed friend.</p>
 		              </div>
 		            </div>
     					</div>
     					<div class="col-md-6 ftco-animate">
-    						<div class="media block-6 services border text-center">
-		            	<div class="icon d-flex align-items-center justify-content-center">
+    						<div class="media block-6 services border text-left">
+		            	<div class="icon d-flex align-items-center justify-content-left">
 		            		<span class="flaticon-database"></span>
 		            	</div>
 		              <div class="mt-3 media-body media-body-2">
-		                <h3 class="heading">Dedicated</h3>
-		                <p>Even the all-powerful Pointing has no control about the blind texts</p>
+		                <h3 class="heading">Getting Support</h3>
+		                <p>The friend will then be able to visit the map embedded within the website to contact local therapists and create a plan in order to support the friend that is depressed.</p>
 		              </div>
 		            </div>
     					</div>
