Update Pairings UI

--- a/pairings.html
+++ b/pairings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CoHost - Free Bootstrap 4 Template by Colorlib</title>
+    <title>SuiSense</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -30,7 +30,7 @@
 
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">CoHost</a>
+	      <a class="navbar-brand" href="index.html">SuiSense</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -63,7 +63,7 @@
 
 
     <section> <!-- copied code from python anywhere form -->
-<section class="ftco-section bg-light">
+<section class="ftco-section bg-white">
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
@@ -233,154 +233,59 @@
     	</div>
     </section>
 
-    <section class="ftco-section ftco-no-pt ftc-no-pb">
-    	<div class="container">
-    		<div class="row">
-    			<div class="col-lg-6 py-5">
-    				<img src="images/undraw_podcast_q6p7.svg" class="img-fluid" alt="">
-    				<div class="heading-section ftco-animate mt-5">
-	            <h2 class="mb-4">Our Main Services</h2>
-	            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country.</p>
-	          </div>
-    			</div>
-    			<div class="col-lg-6 py-5">
-    				<div class="row">
-    					<div class="col-md-6 ftco-animate">
-    						<div class="media block-6 services border text-center">
-		            	<div class="icon d-flex align-items-center justify-content-center">
-		            		<span class="flaticon-cloud-computing"></span>
-		            	</div>
-		              <div class="mt-3 media-body media-body-2">
-		                <h3 class="heading">Cloud VPS</h3>
-		                <p>Even the all-powerful Pointing has no control about the blind texts</p>
-		              </div>
-		            </div>
-    					</div>
-    					<div class="col-md-6 ftco-animate">
-    						<div class="media block-6 services border text-center">
-		            	<div class="icon d-flex align-items-center justify-content-center">
-		            		<span class="flaticon-cloud"></span>
-		            	</div>
-		              <div class="mt-3 media-body media-body-2">
-		                <h3 class="heading">Share</h3>
-		                <p>Even the all-powerful Pointing has no control about the blind texts</p>
-		              </div>
-		            </div>
-    					</div>
-    					<div class="col-md-6 ftco-animate">
-    						<div class="media block-6 services border text-center">
-		            	<div class="icon d-flex align-items-center justify-content-center">
-		            		<span class="flaticon-server"></span>
-		            	</div>
-		              <div class="mt-3 media-body media-body-2">
-		                <h3 class="heading">VPS</h3>
-		                <p>Even the all-powerful Pointing has no control about the blind texts</p>
-		              </div>
-		            </div>
-    					</div>
-    					<div class="col-md-6 ftco-animate">
-    						<div class="media block-6 services border text-center">
-		            	<div class="icon d-flex align-items-center justify-content-center">
-		            		<span class="flaticon-database"></span>
-		            	</div>
-		              <div class="mt-3 media-body media-body-2">
-		                <h3 class="heading">Dedicated</h3>
-		                <p>Even the all-powerful Pointing has no control about the blind texts</p>
-		              </div>
-		            </div>
-    					</div>
-    				</div>
-          </div>
-    		</div>
-    	</div>
-    </section>
 
-    <section class="ftco-section bg-light">
+
+    <section class="ftco-section bg-white">
     	<div class="container">
     		<div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
-            <h2 class="mb-4">Your Question</h2>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+            <h2 class="mb-4">Your Pairings</h2>
+            <p>This is your interface which displays your ideal pairing based on your own personalized needs. Please note the following cards are just an example of how pairings look, once you submit a report and get a personalized link, it will be updated.</p>
           </div>
         </div>
-    		<div class="row">
-    			<div class="col-md-12 ftco-animate">
-    				<div id="accordion">
-    					<div class="row">
-    						<div class="col-md-6">
-    							<div class="card">
-						        <div class="card-header">
-										  <a class="card-link" data-toggle="collapse"  href="#menuone" aria-expanded="true" aria-controls="menuone">What is your domain name? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
-						        </div>
-						        <div id="menuone" class="collapse show">
-						          <div class="card-body">
-												<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
-						          </div>
-						        </div>
-						      </div>
+        <div class="row">
+            <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-right">
+              <div class="card">
+                <div class="card-img">
+                  <img div style="width: 600px; height: 338px; overflow: hidden" src="assets/img/gilroypic.jpeg" alt="...">
+                </div>
+                <div class="card-body">
+                  <h3 class="card-title"><a href="">Your Information:</a></h3>
+                  <h5 class="card-title"><a href="">Gilroy High School</a></h5>
+                  <p class="card-text"><b>School Email:</b> vishraj55@gmail.com</p>
+                  <p class="card-text"><b>School Address:</b> 750 W 10th St, Gilroy, CA</p>
+                  <p class="card-text"><b>Devices Type Available:</b> Chromebooks</p>
+                  <p class="card-text"><b>Number of Devices Needed:</b> 1000</p>
+                </div>
+              </div>
+            </div>
 
-						      <div class="card">
-						        <div class="card-header">
-										  <a class="card-link" data-toggle="collapse"  href="#menutwo" aria-expanded="false" aria-controls="menutwo">How long is my domain name valid? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
-						        </div>
-						        <div id="menutwo" class="collapse">
-						          <div class="card-body">
-												<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
-						          </div>
-						        </div>
-						      </div>
 
-						      <div class="card">
-						        <div class="card-header">
-										  <a class="card-link" data-toggle="collapse"  href="#menu3" aria-expanded="false" aria-controls="menu3">Can I sell my domain name? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
-						        </div>
-						        <div id="menu3" class="collapse">
-						          <div class="card-body">
-												<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
-						          </div>
-						        </div>
-						      </div>
-    						</div>
+                      <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-left">
+                        <div class="card">
+                          <div style="width: 600px; height: 338px; overflow: hidden" class="card-img">
+                            <img src="images/shereen.jpg" width="600" alt="...">
+                          </div>
+                          <div class="card-body">
+                            <h3 class="card-title"><a href="">Your Match:</a></h3>
+                            <h5 class="card-title"><a href="">Dr. Shereen Mohsen</a></h5>
+                            <p class="card-text"><b>Email:</b> shereenmohsen@gmail.com</p>
+                            <p class="card-text"><b>Office Address:</b> 1101 S Winchester Blvd, Suite J-205, San Jose, California, 95128</p>
+                            <p class="card-text"><b>Therapist Type: </b>Availability:</b> 6/30/2020-7/7/2020, 9:00am - 5:30pm</p>
+                            <hr>
+                            <h5 class="card-title"><a href="">Recommendation</a></h5>
+                            <p class="card-text"><b>Number of Devices to Share:</b> 800</p>
+                            <p class="card-text"><b>Type of Shared Device:</b> Chromebooks</p>
+                            <p class="card-text"><b>Distance Between Schools:</b> 40.1 miles</p>
+                            <p class="card-text"><b>Recommended Plan:</b></p>
+                              <p class="card-text">-Schools should contact each other ASAP to begin the transfer</p>
+                              <p class="card-text">-Both schools should have volunteers ready to pick up devices</p>
+                              <p class="card-text"><b>Recommended Date:</b> June 5th, 2020 -- June 10th, 2020</p
+                                <div class="read-more"><a href="#"><i class="icofont-arrow-right"></i>Confirm Pairing to Begin</a></div>
+                          </div>
+                        </div>
 
-    						<div class="col-md-6">
-    							<div class="card">
-						        <div class="card-header">
-										  <a class="card-link" data-toggle="collapse"  href="#menu4" aria-expanded="false" aria-controls="menu4">Can I cancel a domain? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
-						        </div>
-						        <div id="menu4" class="collapse">
-						          <div class="card-body">
-												<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
-						          </div>
-						        </div>
-						      </div>
-
-						      <div class="card">
-						        <div class="card-header">
-										  <a class="card-link" data-toggle="collapse"  href="#menu5" aria-expanded="false" aria-controls="menu5">How do I transfer a domain name? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
-						        </div>
-						        <div id="menu5" class="collapse">
-						          <div class="card-body">
-												<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
-						          </div>
-						        </div>
-						      </div>
-
-						      <div class="card">
-						        <div class="card-header">
-										  <a class="card-link" data-toggle="collapse"  href="#menu6" aria-expanded="false" aria-controls="menu6">How do I setup URL forwarding? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
-						        </div>
-						        <div id="menu6" class="collapse">
-						          <div class="card-body">
-												<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
-						          </div>
-						        </div>
-						      </div>
-    						</div>
-    					</div>
-				    </div>
-    			</div>
-    		</div>
-    	</div>
+                  </div>
     </section>
 
     <footer class="ftco-footer ftco-bg-dark ftco-section">
