--- a/analysis.html
+++ b/analysis.html
@@ -46,9 +46,7 @@
             <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
            <li class="nav-item"><a href="analysis.html" class="nav-link">Analysis</a></li>
            <li class="nav-item"><a class="nav-link" href="pairings.html">Pairings</a></li>
-           <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-           <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-           <li class="nav-item cta"><a href="analysis.html" class="nav-link"><span>Get started</span></a></li>
+           <li class="nav-item"><a href="blog.html" class="nav-link">Support</a></li>
 	        </ul>
 	      </div>
 	    </div>
