more adddd to FAQ

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 						        </div>
 						        <div id="menu4" class="collapse">
 						          <div class="card-body">
-												<p>In order to maximize the use of this site, you will first have to input the message that your friend sent to you, wheter it is a screenshot of your chat or just typing it out. Our NLP model will then analyze the message, telling you if it signals suicidal intentions. Based on your results, you can then check out the map embedded within our cite, and then search for a therapist nearby and sign up through a forum to get in contact with them.</p>
+												<p>In order to maximize the use of this site, you will first have to input the message that your friend sent to you, wheter it is a screenshot of your chat or just typing it out. Our NLP model will then analyze the message, telling you if it signals suicidal intentions. Based on your results, you can then check out the map embedded within our cite, and then search for a therapist nearby and sign up through a forum to get in contact with them. Additionally, therapists can use this as a tool to gain a better understanding of their patients.</p>
 						          </div>
 						        </div>
 						      </div>
