--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="overlay"></div>
       <div class="container-fluid px-0">
       	<div class="row d-md-flex no-gutters slider-text align-items-center js-fullheight justify-content-end">
-	      	<img class="one-third js-fullheight align-self-end order-md-last img-fluid" src="images/undraw_pair_programming_njlp.svg" alt="">
+	      	<img class="one-third js-fullheight align-self-end order-md-last img-fluid" src="images/IMG-0518.jpg" alt="">
 	        <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
 	        	<div class="text mt-5">
 	            <h1 class="mb-3"><span>SuiSense</h1>
